@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-06-22T08:32:13Z",
-  "count" : 183,
-  "count_minmax" : [ 121, 353 ],
-  "count_decinc" : [ -170, +353 ],
-  "uniques" : 2,
-  "uniques_minmax" : [ 2, 2 ],
-  "uniques_decinc" : [ -0, +2 ]
+  "timestamp" : "2022-06-22T16:34:30Z",
+  "count" : 57,
+  "count_minmax" : [ 57, 353 ],
+  "count_decinc" : [ -296, +353 ],
+  "uniques" : 1,
+  "uniques_minmax" : [ 1, 2 ],
+  "uniques_decinc" : [ -1, +2 ]
 }
