@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-06-22T08:32:13Z",
-  "count" : 120,
-  "count_minmax" : [ 120, 120 ],
-  "count_decinc" : [ -0, +120 ],
+  "timestamp" : "2022-06-22T16:34:30Z",
+  "count" : 245,
+  "count_minmax" : [ 120, 245 ],
+  "count_decinc" : [ -0, +245 ],
   "uniques" : 1,
   "uniques_minmax" : [ 1, 1 ],
   "uniques_decinc" : [ -0, +1 ]
