@@ -1,11 +1,11 @@
 {
-  "count": 4912,
+  "count": 4911,
   "uniques": 15,
   "clones": [
     {
       "timestamp": "2022-06-08T00:00:00Z",
-      "count": 183,
-      "uniques": 2
+      "count": 57,
+      "uniques": 1
     },
     {
       "timestamp": "2022-06-09T00:00:00Z",
@@ -74,7 +74,7 @@
     },
     {
       "timestamp": "2022-06-22T00:00:00Z",
-      "count": 120,
+      "count": 245,
       "uniques": 1
     }
   ]
