@@ -1,3 +1,10 @@
+2022-06-22T16:34:30Z:
+* notice: last 14d: unq all: 15 4911
+* notice: prev accum: outdated-unq outdated-all / unq all: 632 31157 / 676 36069
+* notice: next accum: outdated-unq outdated-all / unq all: 632 31157 / 675 36068
+* notice: prev exec diff / last date diff / accum: unq all: +0 +125 -1 -126 / +1 +245 -0 -0 / 1 245
+* notice: removed / changed dates: [] / [2022-06-08 2022-06-22]
+
 2022-06-22T08:32:13Z:
 * notice: last 14d: unq all: 15 4912
 * notice: prev accum: outdated-unq outdated-all / unq all: 632 31157 / 675 36051
